[gd_scene load_steps=26 format=3 uid="uid://dkm8htnfe2j7g"]

[ext_resource type="PackedScene" uid="uid://bpseboohqxgou" path="res://game/tutorial/machine.tscn" id="1_b3inv"]
[ext_resource type="Script" path="res://game/game.gd" id="1_hdvhs"]
[ext_resource type="Shader" path="res://menu/menu.gdshader" id="2_wjxbc"]
[ext_resource type="PackedScene" uid="uid://fmi417501t64" path="res://game/core/toolbox.tscn" id="3_5lpl1"]
[ext_resource type="PackedScene" uid="uid://etrp4vbsn388" path="res://game/core/level_header.tscn" id="3_w8h4w"]
[ext_resource type="Texture2D" uid="uid://lh7ntkfu5sxi" path="res://art/game/mouse_usage_hint.png" id="5_kai20"]
[ext_resource type="PackedScene" uid="uid://cokkri2jg0cfk" path="res://game/core/playbook.tscn" id="5_t5wa1"]
[ext_resource type="PackedScene" uid="uid://cb02onpxm2r7x" path="res://game/core/medals.tscn" id="6_18ytx"]
[ext_resource type="PackedScene" uid="uid://b7gnqdufk7u88" path="res://game/core/score.tscn" id="7_ydt4m"]
[ext_resource type="Texture2D" uid="uid://cshypb4u5h6md" path="res://art/menu/menu_button_back_to_menu_disabled.png" id="10_p5aay"]
[ext_resource type="Texture2D" uid="uid://b6756gm1eaivc" path="res://art/menu/menu_button_back_to_menu_pressed.png" id="11_lm5mt"]
[ext_resource type="Texture2D" uid="uid://bsahfc4dktnsn" path="res://art/menu/menu_button_back_to_menu_hover.png" id="12_jp5yp"]
[ext_resource type="PackedScene" uid="uid://ckc64fctuta3k" path="res://game/victory_overlay.tscn" id="13_cwdk3"]
[ext_resource type="Texture2D" uid="uid://1c2as2tutyue" path="res://art/menu/menu_button_fullscreen_normal.png" id="13_l2d4p"]
[ext_resource type="Texture2D" uid="uid://vhbo53xs0k1c" path="res://art/menu/menu_button_fullscreen_pressed.png" id="14_vg6en"]
[ext_resource type="Texture2D" uid="uid://dfvvgvhvfsip3" path="res://art/menu/menu_button_fullscreen_hover.png" id="15_sjff2"]
[ext_resource type="Texture2D" uid="uid://cg0d4r2mipy10" path="res://art/menu/menu_button_fullscreen_disabled.png" id="16_bk4u5"]
[ext_resource type="StyleBox" uid="uid://bsdp2ulxylyef" path="res://game/introduction_label_style_box_texture.tres" id="18_dqiw0"]
[ext_resource type="Texture2D" uid="uid://b783qlgvbwwld" path="res://art/menu/menu_button_letsplay_normal.png" id="19_kbyvr"]
[ext_resource type="Texture2D" uid="uid://cp4t67x5badsq" path="res://art/menu/menu_button_letsplay_pressed.png" id="20_cpqgb"]
[ext_resource type="Texture2D" uid="uid://c8vu4i8bgbk3r" path="res://art/menu/menu_button_letsplay_hover.png" id="21_q8htx"]
[ext_resource type="Texture2D" uid="uid://blddrywifgwyv" path="res://art/menu/menu_button_letsplay_disabled.png" id="22_t38fp"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uoqc3"]
shader = ExtResource("2_wjxbc")
shader_parameter/base_scroll_speed = 40.0

[sub_resource type="Animation" id="Animation_w6q7p"]
resource_name = "introduction_animation"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.686275), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3ok5t"]
_data = {
"introduction_animation": SubResource("Animation_w6q7p")
}

[node name="Game" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_hdvhs")
metadata/_edit_horizontal_guides_ = []
metadata/_edit_vertical_guides_ = [550.0, 1050.0]

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="PanelContainer"]
material = SubResource("ShaderMaterial_uoqc3")
layout_mode = 2
color = Color(0.0666667, 0.0666667, 0.0666667, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="LeftSide" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 3

[node name="LevelHeaderContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/LeftSide"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="LevelHeader" parent="MarginContainer/HBoxContainer/LeftSide/LevelHeaderContainer" instance=ExtResource("3_w8h4w")]
layout_mode = 2

[node name="Toolbox" parent="MarginContainer/HBoxContainer/LeftSide" instance=ExtResource("3_5lpl1")]
unique_name_in_owner = true
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "left mouse - move"
horizontal_alignment = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("5_kai20")

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "rotate - right button"

[node name="machine" parent="MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("1_b3inv")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8

[node name="RightSide" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="Playbook" parent="MarginContainer/HBoxContainer/RightSide" instance=ExtResource("5_t5wa1")]
unique_name_in_owner = true
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="MarginContainer/HBoxContainer/RightSide"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
columns = 2

[node name="RunPlaybookButton" type="Button" parent="MarginContainer/HBoxContainer/RightSide/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0, 0.847059, 0, 1)
theme_override_colors/font_pressed_color = Color(0.45098, 0.819608, 0.45098, 1)
theme_override_colors/font_hover_color = Color(0.45098, 0.819608, 0.45098, 1)
theme_override_colors/font_focus_color = Color(0.486275, 1, 0.454902, 1)
theme_override_colors/font_hover_pressed_color = Color(0.270588, 0.819608, 0.270588, 1)
theme_override_font_sizes/font_size = 24
text = "Run Playbook"

[node name="StressTestButton" type="Button" parent="MarginContainer/HBoxContainer/RightSide/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0.85098, 0.423529, 0, 1)
theme_override_colors/font_pressed_color = Color(0.82, 0.6355, 0.451, 1)
theme_override_colors/font_hover_color = Color(0.82, 0.4674, 0.1148, 1)
theme_override_colors/font_focus_color = Color(1, 0.56, 0.12, 1)
theme_override_colors/font_hover_pressed_color = Color(0.82, 0.5453, 0.2706, 1)
theme_override_font_sizes/font_size = 24
text = "Stress Test"

[node name="Score" parent="MarginContainer/HBoxContainer/RightSide" instance=ExtResource("7_ydt4m")]
unique_name_in_owner = true
layout_mode = 2

[node name="Medals" parent="MarginContainer/HBoxContainer/RightSide" instance=ExtResource("6_18ytx")]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/RightSide"]
layout_mode = 2
size_flags_vertical = 10
theme_override_constants/separation = 16

[node name="BackToMenuButton" type="TextureButton" parent="MarginContainer/HBoxContainer/RightSide/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
mouse_default_cursor_shape = 2
texture_normal = ExtResource("10_p5aay")
texture_pressed = ExtResource("11_lm5mt")
texture_hover = ExtResource("12_jp5yp")
texture_disabled = ExtResource("10_p5aay")

[node name="FullScreenButton" type="TextureButton" parent="MarginContainer/HBoxContainer/RightSide/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("13_l2d4p")
texture_pressed = ExtResource("14_vg6en")
texture_hover = ExtResource("15_sjff2")
texture_disabled = ExtResource("16_bk4u5")

[node name="IntroductionOverlay" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)

[node name="Label1" type="Label" parent="IntroductionOverlay"]
layout_mode = 2
offset_left = 528.0
offset_top = 193.0
offset_right = 877.0
offset_bottom = 234.0
theme_override_colors/font_color = Color(0.345098, 0.109804, 0.529412, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("18_dqiw0")
text = "< Drag items from here..."

[node name="Label2" type="Label" parent="IntroductionOverlay"]
layout_mode = 0
offset_left = 635.0
offset_top = 247.0
offset_right = 943.0
offset_bottom = 288.0
theme_override_colors/font_color = Color(0.345098, 0.109804, 0.529412, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("18_dqiw0")
text = "...to the playing field..."

[node name="Label3" type="Label" parent="IntroductionOverlay"]
layout_mode = 0
offset_left = 692.0
offset_top = 301.0
offset_right = 1085.0
offset_bottom = 342.0
theme_override_colors/font_color = Color(0.345098, 0.109804, 0.529412, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("18_dqiw0")
text = "...and Run (or Stress Test) >"

[node name="Label4" type="Label" parent="IntroductionOverlay"]
layout_mode = 0
offset_left = 909.0
offset_top = 75.0
offset_right = 1049.0
offset_bottom = 129.0
theme_override_colors/font_color = Color(0.345098, 0.109804, 0.529412, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = ExtResource("18_dqiw0")
text = "Current level's >
playbook >"
horizontal_alignment = 2

[node name="Label6" type="Label" parent="IntroductionOverlay"]
layout_mode = 0
offset_left = 498.0
offset_top = 82.0
offset_right = 624.0
offset_bottom = 109.0
theme_override_colors/font_color = Color(0.345098, 0.109804, 0.529412, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = ExtResource("18_dqiw0")
text = "< Current level"

[node name="Label7" type="Label" parent="IntroductionOverlay"]
layout_mode = 0
offset_left = 792.0
offset_top = 68.0
offset_right = 809.0
offset_bottom = 95.0
theme_override_colors/font_color = Color(0.345098, 0.109804, 0.529412, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = ExtResource("18_dqiw0")
text = "^^"

[node name="Label5" type="Label" parent="IntroductionOverlay"]
layout_mode = 0
offset_left = 858.0
offset_top = 737.0
offset_right = 1055.0
offset_bottom = 791.0
theme_override_colors/font_color = Color(0.345098, 0.109804, 0.529412, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = ExtResource("18_dqiw0")
text = "Bronze required >
to advance one level >"
horizontal_alignment = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="IntroductionOverlay"]
autoplay = "introduction_animation"
libraries = {
"": SubResource("AnimationLibrary_3ok5t")
}

[node name="DismissIntroductionButton" type="TextureButton" parent="IntroductionOverlay"]
layout_mode = 0
offset_left = 645.0
offset_top = 444.0
offset_right = 957.0
offset_bottom = 502.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("19_kbyvr")
texture_pressed = ExtResource("20_cpqgb")
texture_hover = ExtResource("21_q8htx")
texture_disabled = ExtResource("22_t38fp")

[node name="VictoryOverlay" parent="." instance=ExtResource("13_cwdk3")]
visible = false
layout_mode = 1

[connection signal="button_up" from="MarginContainer/HBoxContainer/RightSide/GridContainer/RunPlaybookButton" to="." method="_on_run_playbook_button_button_up"]
[connection signal="button_up" from="MarginContainer/HBoxContainer/RightSide/GridContainer/StressTestButton" to="." method="_on_stress_test_button_button_up"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/RightSide/HBoxContainer/BackToMenuButton" to="." method="_on_back_to_menu_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/RightSide/HBoxContainer/FullScreenButton" to="." method="_on_full_screen_button_pressed"]
[connection signal="pressed" from="IntroductionOverlay/DismissIntroductionButton" to="." method="_on_dismiss_introduction_button_pressed"]
